# tips-n-dips

./: .gitignore  README.md  pyproject.toml
.agent/rules/: data-analysis-jupyter.md  python-cybersec.md  python-fastapi.md
.agent/workflows/: batch-document-python-workspace.md  document-python-projects.md  setup-python-dev-env.md  unit-tests-pytest.md
.cursor/commands/: batch-document-python-workspace.md  git-msg.md  setup-python-dev-env.md  unit-tests-pytest.md
.cursor/commands/commands/: document-python-projects.md
.cursor/rules/: data-analysis-jupyter.mdc  python-cybersec.mdc  python-fastapi.mdc
config_migrator/: LICENSE  README.md  pyproject.toml
config_migrator/src/bash/: installer.sh
config_migrator/src/python/config_migrator/: __main__.py
config_migrator/src/python/config_migrator/adapters/: __init__.py  base.py  factory.py  linux.py  osx.py
config_migrator/src/python/config_migrator/defaults/: linux.py  osx.py
config_migrator/src/python/config_migrator/exporters/: linux.py  osx.py
config_migrator/src/python/config_migrator/helpers/: logger.py  types.py  utils.py
config_migrator/src/python/config_migrator/importers/: linux.py  osx.py
linux_config_migrator/: README.md  migrator.py  run.sh
linux_config_migrator/linux_config_migrator/: __init__.py  __main__.py  config.py  exporter.py  importer.py  logger.py  types.py  utils.py
tests/tests_linux_config_migrator/: __init__.py  test_utils.py
