[project]
name = "config-migrator"
version = "1.0.0"
description = "Config migrator."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Elmorralito", email = "drestrepohinc@gmail.com" }]
requires-python = ">=3.11,<4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic[email,secret,extra-types] (>=2.3.0,<3.0)"
]

[project.urls]
HomePage = "https://github.com/Elmorralito/tips-and-dips/tree/main/config-migrator"

[tool.poetry]
packages = [{ include = "config_migrator", from = "src/python/" }]
include = ["./pyproject.toml"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
